[project]
name = "ragsphere"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "inngest>=0.5.19",
    "llama-index-core>=0.14.23",
    "llama-index-readers-file>=0.6.0",
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.50.0",
]
